--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header container">
-        <a href="/" class="logo">
+        <a href="#" class="logo">
             <img width="128" src="img/logo.png" alt="Лого: Индекс Еда" class="logo-image">
         </a>
         <form action="#" class="search-form">
@@ -46,8 +46,54 @@
                 </defs>
             </svg>
             <span class="shopping-counter">12</span>
-
         </a>
     </header>
+    <main class="container">
+        <div class="slider">
+            <div class="slide slide-text-light slide-summer">
+                <div class="slide-content">
+                    <h2 class="slide-title">Неделя летних овощей</h2>
+                    <p class="slide-text">Специальная овощная корзина. Новые продукты, специальные цены, скидки!</p>
+                    <a href="#" class="button button-primary">Заказать со скидкой</a>
+                </div>
+            </div>
+            <!-- /.slide -->
+        </div>
+        <!-- /.slider -->
+        <div class="change-promo">
+            <div class="promo promo-sweet-basket">
+                <section class="card card-text-light sweet-basket">
+                    <img src="img/sweet-basket.png" alt="сладкая коризна" class="card-image">
+                    <div class="card-header">
+                        <h3 class="card-title">Сладкая корзина</h3>
+                        <p class="card-description">Произвольный выбор десертов по Вашему желанию.</p>
+                    </div>
+                    <!-- /.card-header -->
+                    <div class="card-footer">
+                        <strong class="card-price">ОТ 1 300 ₽</strong>
+                        <div class="card-delivery">стоимость доставки до 200 ₽</div>
+                        <a href="" class="button button-default">Собрать корзину</a>
+                    </div>
+                    <!-- /.card-footer -->
+                </section>
+            </div>
+            <div class="promo promo-min-effort">
+                <section class="card card-text-light min-effort">
+                    <img src="img/min-effort.png" alt="Минимум усилий" class="card-image">
+                    <div class="card-header">
+                        <h3 class="card-title">Минимум усилий</h3>
+                        <p class="card-description">Произвольный выбор десертов по Вашему желанию.</p>
+                    </div>
+                    <!-- /.card-header -->
+                    <div class="card-footer">
+                        <strong class="card-price">ОТ 700 ₽</strong>
+                        <div class="card-delivery">стоимость доставки до 200 ₽</div>
+                        <a href="" class="button button-default">Собрать корзину</a>
+                    </div>
+                    <!-- /.card-footer -->
+                </section>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
