--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <!-- /.delivery-card -->
                     <div class="delivery-card">
                         <img src="img/cards/card6.png" alt="" class="delivery-image">
-                        <span class="delivery-tag tag-kids">Детсоке</span>
+                        <span class="delivery-tag tag-kids">Детское</span>
                     </div>
                     <!-- /.delivery-card -->
                     <div class="delivery-card">
